--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@turf/turf": "^6.5.0",
+    "geolib": "^3.3.4",
+    "ngx-google-places-autocomplete": "^2.0.5",
+    "ngx-paypal": "^11.0.0",
     "ngx-toastr": "^18.0.0",
     "router": "^1.3.8",
     "rxjs": "~7.8.0",
@@ -30,6 +34,7 @@
     "@angular-devkit/build-angular": "^16.2.8",
     "@angular/cli": "^16.2.8",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/googlemaps": "^3.43.3",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
